--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -172,6 +172,7 @@
 		&:focus {
 			background-color: var(--color-primary-ci-hell2);
 			color: var(--color-primary-ci-hell2-kontrast);
+			outline-style: none;
                         
                        
 		}
