--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -8,7 +8,7 @@
     float: none;
     margin: 0 -15px;
 
-
+   
     @media (min-width: $screen-xs) {
         float: right;
         margin: 20px 0 10px 20px;
@@ -19,7 +19,18 @@
         height: auto;
         margin: 0;
         padding: 0;
-
+        
+        a {
+            @include defaultlinkstyle;
+            
+            img {
+                border: 1px solid transparent;
+                
+                &:hover, &:focus {
+                     border: 1px solid var(--color-content-links);
+                }
+            }
+        }
     }
 
     .post-image-caption {
