--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -195,20 +195,22 @@ Mixins File for Wordpress Theme FAU
 
     word-wrap: break-word;
     color: var(--color-content-links);
-    box-shadow: inset 0 -0.1rem 0 0 var(--color-content-links-underline);
+    box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);
+ //   box-shadow: inset 0 -0.1rem 0 0 var(--color-content-links-underline);
    // box-shadow: inset 0 -3px 0 var(--color-content-links-underline);
     //    border-bottom: 1px solid var(--color-content-links-underline);
     transition: all .3s ease-out; //box-shadow 0.3s ease-in-out;
     text-decoration: none;
+    text-decoration-color:  var(--color-primary-ci-hell);
     padding: 1px;
 
 
     &:focus,
     &:hover {
         text-decoration: underline;
-        text-decoration-color: var(--color-content-links-underline);
-        color: var(--color-content-links-hover);
-        box-shadow: inset 0 -1.5rem 0 var(--color-content-links-underline);
+        text-decoration-color:  var(--color-primary-ci-hell);
+        color: var(--color-primary-ci-hell-kontrast);
+        box-shadow: inset 0 -1.5rem 0 var(--color-primary-ci-hell);
     }
 }
 
