#931 - Prev/Next Links

--- a/css/fau-theme-gutenberg.css
+++ b/css/fau-theme-gutenberg.css
@@ -4777,7 +4777,7 @@ table .edit-post-visual-editor .editor-block-list__block h1.mce-content-body {
   line-height: 2.532rem;
 }
 .edit-post-visual-editor .editor-block-list__block h2.mce-content-body.subtitle {
-  padding: 0 0 22px 0;
+  padding: 0 0 1rem 0;
 }
 table .edit-post-visual-editor .editor-block-list__block h2.mce-content-body {
   font-size: 1.687rem;
