--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -81,10 +81,7 @@ h2 {
 
 	
 	&.subtitle {
-		margin: 0 0 22px 15px;
-		@media (min-width: $screen-sm) {
-		    margin-left: 0;
-		}
+            margin: 0 0 1rem 0;
 	}
 	
 		
