--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5044,12 +5044,7 @@ h2.small, h2.subtitle {
   line-height: 2.532rem;
 }
 h2.subtitle {
-  margin: 0 0 22px 15px;
-}
-@media (min-width: 768px) {
-  h2.subtitle {
-    margin-left: 0;
-  }
+  margin: 0 0 1rem 0;
 }
 .search h2 {
   margin-top: 4px;
